Switch contact form to EmailJS

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_FORMSPREE_ENDPOINT="https://formspree.io/f/xeovrprz"
+VITE_EMAILJS_SERVICE_ID="service_nwfex1v"
+VITE_EMAILJS_TEMPLATE_ID="template_ni6tjo6"
+VITE_EMAILJS_PUBLIC_KEY="Gdj6M9raZ41Nsot7z"
